--- a/src/styles/popup/media.less
+++ b/src/styles/popup/media.less
@@ -11,6 +11,10 @@
         height: auto;
     }
 
+    section {
+        overflow: visible;
+    }
+
     aside {
         .wrapper {
             flex-direction: row;
