--- a/src/styles/popup/view/permissions.less
+++ b/src/styles/popup/view/permissions.less
@@ -1,14 +1,8 @@
-body {
-  overflow-y: hidden;
-}
-
 .permissions {
   padding: 24px 24px 0;
   height: 100%;
   display: flex;
   flex-direction: column;
-
-  overflow-y: scroll;
 
   h3 {
     display: flex;
@@ -99,10 +93,6 @@ body {
 }
 
 @media screen and (max-width: 639px) {
-  body {
-    overflow-y: visible;
-  }
-
   .permissions {
     overflow: visible;
 
